Don't use deprecated constructors